--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,12 @@
     "resolveJsonModule": true,
     "outDir": "dist",
     "esModuleInterop": true,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": true,
     "strict": true,
     "skipLibCheck": true,
     "paths": {
