--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,11 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "incremental": true
+    "incremental": true,
+    "typeRoots": ["@types", "./node_modules/@types"]
   },
-  "include": ["**/*.ts"],
+  "files": ["@types/index.d.ts"],
+  "include": ["**/*.ts", "@types/index.d.ts"],
   "exclude": ["node_modules"],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
