--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "cross-env NODE_ENV=production tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node dist/src/app.js"
   },
   "keywords": [],
@@ -20,7 +20,6 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.8",
